# rifaannyka

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  Dockerfile.cron  Justfile  README.md  projeto.md
backend/: entrypoint-cron.sh  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
backend/apps/: api_tests.py
backend/apps/compras/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/compras/management/commands/: expire_stale_purchases.py
backend/apps/compras/migrations/: 0001_initial.py  0002_buyer_cpf.py  0003_purchaseevent.py  0004_purchaseevent_numbers_snapshot.py
backend/apps/gateway/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/gateway/migrations/: 0001_initial.py
backend/apps/notifications/: admin.py  models.py
backend/apps/notifications/migrations/: 0001_initial.py
backend/apps/rifa/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/rifa/management/commands/: seed_demo.py
backend/apps/rifa/migrations/: 0001_initial.py  0002_raffle_goal_amount.py
backend/config/: asgi.py  settings_loader.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py
deploy/cron/: crontab
documentation/: layout de cores.md  projeto.md
frontend/: .env.example  nuxt.config.ts  package-lock.json  package.json  wrangler.jsonc
frontend/components/: BaseButton.vue  BaseCard.vue  BaseInput.vue  BaseModal.vue  NumberGrid.vue  RaffleHero.vue  (+1 more)
(+14 files in other folders)
