[tool.poetry]
name = "rifa-backend"
version = "0.1.0"
description = "Backend Django/DRF para a rifa beneficente"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = ">=5.0,<6.0"
djangorestframework = ">=3.15,<4.0"
django-cors-headers = ">=4.3,<5.0"
django-environ = ">=0.11,<1.0"
pillow = ">=10.0,<11.0"
psycopg = { version = ">=3.1,<4.0", extras = ["binary"] }
gunicorn = ">=22.0,<24.0"
whitenoise = ">=6.8,<7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"
pytest-django = ">=4.8,<5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
